[package]
name = "moon"
version = "0.1.0"
authors = ["JD <jeandamien.brossillon@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "moon"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section"] }
embedded-svc = "0.28"
chrono = "0.4.42"
embedded-stepper = "0.1.2"

git-version = "0.3.9"

ephemeris = { path = "../ephemeris/" }

[build-dependencies]
embuild = "0.33"
